--- a/index.html
+++ b/index.html
@@ -118,8 +118,11 @@
     </div>
       </div>
     </footer>
-    <div class="container-fluid text-center align-content-center" id="copyright">
-      <p> © 2022 Powered By ByondStudio. All rights reserved.</p>
+    <div class="container-fluid text-center align-items-center align-content-center" id="copyright">
+      <div class="container" id="centrarFooter">
+        <p> © 2022 Powered By ByondStudio. All rights reserved.</p>
+      </div>
+
     </div>
 
     <!-- JavaScript Bundle with Popper -->
