--- a/index.html
+++ b/index.html
@@ -64,14 +64,14 @@
       <h1 class="slogan display-1 fw-bolder">MAKING <br> YOUR <br> IDEAS <br> COME TRUE</h1>
     </div>
     
-    <!-- secion1 -->
-    <div class="container d-flex flex-row" id="section1">
-      <div class="container" id="section1__img">
+    <!-- section1 -->
+    <div class="container-fluid d-flex flex-row justify-content-spacearound ms-auto" id="section1">
+      <div class="container-fluid" id="section1__img">
         <img src="./section1img.png" alt="">
       </div>
-      <div class="container p-0 m-0" id="section1__text">
+      <div class="container-fluid" id="section1__text">
         <h2 class="section1__h1 display-5 fw-bolder">Desarrollo Web</h2>
-        <p class="section1__p fs-5">Diseño y desarrollo totalmente personalizado de tu sitio Web para poder mantener tu identidad de marca
+        <p class="section1__p display-6" id="section1__texto">Diseño y desarrollo totalmente personalizado de tu sitio Web para poder mantener tu identidad de marca
             y generar un contenido visual totalmente amigable para tus visitas.
         </p><br>
         <a href="./Pages/contacto.html" class="section1__btn fs-4">Contactar →</a>   
@@ -79,7 +79,7 @@
     </div>
 
     <!-- secion2 -->
-    <div class="container d-flex" id="section2">
+    <div class="container-fluid justify-content-center d-flex" id="section2">
       <div class="container-fluid row mx-auto" id="cards">
         <div class="card" style="width: 18rem;">
           <img src="./imagenes/section2/personalizacion.jpg" class="card-img-top img-fluid" alt="...">
@@ -106,7 +106,7 @@
     <!-- footer -->
     <footer class="container-fluid p-4  d-flex text-center align-items-center" id="footer">
       <div class="container-fluid" id="footer__text">
-        <h2 class="fw-bolder section3__h2">Optimiza el proceso de la <br> creación de tu website con <br> ByondStudio</h2><br><br>
+        <h2 class="fw-bolder display-4 section3__h2">Optimiza el proceso de la <br> creación de tu website con <br> ByondStudio</h2><br>
         <a href="./Pages/contacto.html">
             <button type="button" name="Contactar" class="btn btn-primary section3__btn">Contactar</button><br><br>
         </a>
