--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -23,7 +23,7 @@
       <nav class="navbar navbar-expand-lg" id="navbar">
         <div class="container justify-content-spacebetween">
 
-            <a class="navbar-brand" href="#">Navbar</a>
+            <a class="navbar-brand" href="#">ByondStudio</a>
             <button
               class="navbar-toggler"
               type="button"
@@ -58,6 +58,29 @@
         </div>
       </nav>
     </header>
+    <!-- Form -->
+    <div class="container" id="form">
+      <p>Hola Mundo</p>
+    </div>
+    <!-- footer -->
+    <footer class="container-fluid p-4  d-flex text-center align-items-center" id="footer">
+          <div class="container-fluid" id="footer__text">
+            <h2 class="fw-bolder section3__h2 display-4">Optimiza el proceso de la <br> creación de tu website con <br> ByondStudio</h2><br>
+            <a href="./Pages/contacto.html">
+                <button type="button" name="Contactar" class="btn btn-primary section3__btn">Contactar</button><br><br>
+            </a>
+            <ul class="container d-flex text-center justify-content-center section3__list">
+                <li>✓  Soluciones para tu emprendimiento</li>
+                <li>✓  Atencion personalizada en cada fase del proyecto</li>
+                <li>✓  Diseños modernos y minimalistas</li>
+            </ul>
+        </div>
+          </div>
+    </footer>
+    <div class="container-fluid text-center align-items-center align-content-center" id="copyright">
+      <div class="container" id="centrarFooter">
+            <p> © 2022 Powered By ByondStudio. All rights reserved.</p>
+    </div>
     <!-- JavaScript Bundle with Popper -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
