Pagina de Contacto Actualizado

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -60,15 +60,35 @@
     </header>
     <!-- Form -->
     <div class="container" id="form">
-      <p>Hola Mundo</p>
+      <h2 class="display-6 fw-bolder">Contactanos</h2><br>
+      <div class="mb-3">
+        <label for="exampleFormControlInput1" class="form-label">Nombre</label>
+        <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Ingresa tu nombre completo" required>
+      </div>
+      <div class="mb-3">
+        <label for="exampleFormControlInput1" class="form-label">Numero Telefonico</label>
+        <input type="tel" class="form-control" id="exampleFormControlInput1" placeholder="Ingresa tu numero telefonico" required>
+      </div>
+      <div class="mb-3">
+        <label for="exampleFormControlInput1" class="form-label">Correo Electronico</label>
+        <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Ingresa tu correo electronico" required>
+      </div>
+      <div class="mb-3">
+        <label for="exampleFormControlTextarea1" class="form-label">Example textarea</label>
+        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+      </div>
     </div>
+    </form>
+
+    <div class="container-fluid mb-5 text-center" id="btn">
+      <button class="enviar" type="submit">Enviar</button>
+    </div>
+
     <!-- footer -->
     <footer class="container-fluid p-4  d-flex text-center align-items-center" id="footer">
           <div class="container-fluid" id="footer__text">
             <h2 class="fw-bolder section3__h2 display-4">Optimiza el proceso de la <br> creación de tu website con <br> ByondStudio</h2><br>
-            <a href="./Pages/contacto.html">
-                <button type="button" name="Contactar" class="btn btn-primary section3__btn">Contactar</button><br><br>
-            </a>
+
             <ul class="container d-flex text-center justify-content-center section3__list">
                 <li>✓  Soluciones para tu emprendimiento</li>
                 <li>✓  Atencion personalizada en cada fase del proyecto</li>
