--- a/pages/branding.html
+++ b/pages/branding.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ByondStudio - Home</title>
+    <title>ByondStudio - Branding</title>
     <!-- CSS only -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
@@ -58,6 +58,60 @@
         </div>
       </nav>
     </header>
+
+    <div class="margin"></div>
+
+    <!-- Branding_Section -->
+
+      <div class="container row align-content-center justify-content-center d-flex ms-auto mx-auto" id="branding1">
+        <div class="col row align-content-center d-flex">
+          <img src="https://img.freepik.com/free-photo/template-badge-layout-mock-up-visual-blank-concept_53876-121106.jpg?w=1380&t=st=1659661019~exp=1659661619~hmac=d1995a19fea22c4c63870e18ad39f33b5bedaab4e62e1c5db1bbf295af8aaabe
+          " class="img-fluid rounded-start" alt="...">
+        </div>
+
+        <div class="col row align-content-center ms-auto mx-auto d-flex">
+          <h5 class="card-title">Creamos tu marca</h5>
+          <p class="card-text text">El branding es el proceso que realizamos al construir una imagen de marca que pueda ser reconocida de forma rápida y fácil por un público objetivo. Esto se consigue gracias a una excelente identidad visual y a los valores que se transmiten. El objetivo de un buen branding es conseguir que tu marca o empresa sea lo primero que le viene a la mente a una persona cuando se habla del producto que vendes.</p>
+        </div>
+      </div>
+      <div class="margin"></div>
+      <div class="container row align-content-center justify-content-center d-flex ms-auto mx-auto d-flex" id="branding2">
+        <div class="col row align-content-center ms-auto mx-auto">
+          <h5 class="card-title">Creamos tu marca</h5>
+          <p class="card-text text">El branding es el proceso que realizamos al construir una imagen de marca que pueda ser reconocida de forma rápida y fácil por un público objetivo. Esto se consigue gracias a una excelente identidad visual y a los valores que se transmiten. El objetivo de un buen branding es conseguir que tu marca o empresa sea lo primero que le viene a la mente a una persona cuando se habla del producto que vendes.</p>
+        </div>
+
+        <div class="col row align-content-center d-flex">
+          <img src="https://img.freepik.com/free-photo/young-female-designer-working-her-laptop_23-2149142107.jpg?w=1800&t=st=1659661568~exp=1659662168~hmac=d278b024818436364153139cab35cc270bb541d99cedf093b85e64e1007ec828
+          " class="rounded-start" alt="...">
+        </div>
+      </div>
+      <div class="margin"></div>
+
+
+        <!-- footer -->
+        <footer class="container-fluid p-4  d-flex text-center align-items-center" id="footer">
+          <div class="container-fluid" id="footer__text">
+            <h2 class="fw-bolder display-4 section3__h2">Optimiza el proceso de la <br> creación de tu website con <br> ByondStudio</h2><br>
+            <a href="./Pages/contacto.html">
+                <button type="button" name="Contactar" class="btn btn-primary section3__btn">Contactar</button><br><br>
+            </a>
+            <ul class="container d-flex text-center justify-content-center section3__list">
+                <li>✓  Soluciones para tu emprendimiento</li>
+                <li>✓  Atencion personalizada en cada fase del proyecto</li>
+                <li>✓  Diseños modernos y minimalistas</li>
+            </ul>
+        </div>
+          </div>
+        </footer>
+        <div class="container-fluid text-center align-items-center align-content-center" id="copyright">
+          <div class="container" id="centrarFooter">
+            <p> © 2022 Powered By ByondStudio. All rights reserved.</p>
+          </div>
+    
+        </div>
+    
+
     <!-- JavaScript Bundle with Popper -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
