Correcciones menores de textos en la pagina

--- a/pages/branding.html
+++ b/pages/branding.html
@@ -23,7 +23,7 @@
       <nav class="navbar navbar-expand-lg" id="navbar">
         <div class="container justify-content-spacebetween">
 
-            <a class="navbar-brand" href="#">Navbar</a>
+            <a class="navbar-brand" href="#">ByondStudio</a>
             <button
               class="navbar-toggler"
               type="button"
@@ -66,24 +66,25 @@
       <div class="container row align-content-center justify-content-center d-flex ms-auto mx-auto" id="branding1">
         <div class="col row align-content-center d-flex">
           <img src="https://img.freepik.com/free-photo/template-badge-layout-mock-up-visual-blank-concept_53876-121106.jpg?w=1380&t=st=1659661019~exp=1659661619~hmac=d1995a19fea22c4c63870e18ad39f33b5bedaab4e62e1c5db1bbf295af8aaabe
-          " class="img-fluid rounded-start" alt="...">
+          " class="img-fluid rounded-start " alt="...">
         </div>
 
         <div class="col row align-content-center ms-auto mx-auto d-flex">
           <h5 class="card-title">Creamos tu marca</h5>
-          <p class="card-text text">El branding es el proceso que realizamos al construir una imagen de marca que pueda ser reconocida de forma rápida y fácil por un público objetivo. Esto se consigue gracias a una excelente identidad visual y a los valores que se transmiten. El objetivo de un buen branding es conseguir que tu marca o empresa sea lo primero que le viene a la mente a una persona cuando se habla del producto que vendes.</p>
+          <p class="card-text text"  id="cardText">El branding es el proceso que realizamos al construir una imagen de marca que pueda ser reconocida de forma rápida y fácil por un público objetivo. Esto se consigue gracias a una excelente identidad visual y a los valores que se transmiten. El objetivo de un buen branding es conseguir que tu marca o empresa sea lo primero que le viene a la mente a una persona cuando se habla del producto que vendes.</p>
         </div>
       </div>
       <div class="margin"></div>
       <div class="container row align-content-center justify-content-center d-flex ms-auto mx-auto d-flex" id="branding2">
         <div class="col row align-content-center ms-auto mx-auto">
-          <h5 class="card-title">Creamos tu marca</h5>
-          <p class="card-text text">El branding es el proceso que realizamos al construir una imagen de marca que pueda ser reconocida de forma rápida y fácil por un público objetivo. Esto se consigue gracias a una excelente identidad visual y a los valores que se transmiten. El objetivo de un buen branding es conseguir que tu marca o empresa sea lo primero que le viene a la mente a una persona cuando se habla del producto que vendes.</p>
+          <h5 class="card-title">Diseñamos tu logo</h5>
+          <p class="card-text text">Creamos un logo ajustado a tu medida, incorporando una paleta de colores que se ajuste a tu identidad de marca.<br>
+            Diferencia a tu empresa de las demas con una imagen corporativa formal pero que al a vez represente la escencia de tu empresa.</p>
         </div>
 
         <div class="col row align-content-center d-flex">
           <img src="https://img.freepik.com/free-photo/young-female-designer-working-her-laptop_23-2149142107.jpg?w=1800&t=st=1659661568~exp=1659662168~hmac=d278b024818436364153139cab35cc270bb541d99cedf093b85e64e1007ec828
-          " class="rounded-start" alt="...">
+          " class="img-fluid rounded-start ms-auto mx-auto" alt="...">
         </div>
       </div>
       <div class="margin"></div>
