--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -74,7 +74,7 @@
         <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Ingresa tu correo electronico" required>
       </div>
       <div class="mb-3">
-        <label for="exampleFormControlTextarea1" class="form-label">Example textarea</label>
+        <label for="exampleFormControlTextarea1" class="form-label">Comentarios</label>
         <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
       </div>
     </div>
