terminados todos las secciones de la pagina, pendiente por mejorar diseño

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -17,7 +17,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,400;0,500;1,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../styles/styles.css">
   </head>
-  <body>
+  <body id="contacto">
     <!-- Header -->
     <header class="site-header">
       <nav class="navbar navbar-expand-lg" id="navbar">
@@ -80,12 +80,12 @@
     </div>
     </form>
 
-    <div class="container-fluid mb-5 text-center" id="btn">
+    <div class="container-fluid text-center" id="btn">
       <button class="enviar" type="submit">Enviar</button>
     </div>
 
     <!-- footer -->
-    <footer class="container-fluid p-4  d-flex text-center align-items-center" id="footer">
+    <footer class="container-fluid p-4  d-flex text-center align-items-center footer" id="footer">
           <div class="container-fluid" id="footer__text">
             <h2 class="fw-bolder section3__h2 display-4">Optimiza el proceso de la <br> creación de tu website con <br> ByondStudio</h2><br>
 
