--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ByondStudio - Home</title>
+    <title>ByondStudio - Nosotros</title>
     <!-- CSS only -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
@@ -15,7 +15,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,400;0,500;1,700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="../styles/styles.css">
   </head>
   <body>
     <!-- Header -->
@@ -23,7 +23,7 @@
       <nav class="navbar navbar-expand-lg" id="navbar">
         <div class="container justify-content-spacebetween">
 
-            <a class="navbar-brand" href="#">Navbar</a>
+            <a class="navbar-brand" href="#">ByondStudio</a>
             <button
               class="navbar-toggler"
               type="button"
@@ -58,6 +58,43 @@
         </div>
       </nav>
     </header>
+
+    <div class="container-fluid d-flex nosotros align-content-center">
+      <div class="container-fluid col-6 col-sm-6 col-md-6 col-lg-6 nosotros__img align-content-center">
+        <img class="img-fluid" src="https://img.freepik.com/free-vector/about-us-concept-illustration_114360-639.jpg?w=1380&t=st=1659660337~exp=1659660937~hmac=8b4a31430eb28ca497721e5efd927ec9e1bcf079da622e3aa3805c09d85a25d1">
+      </div>
+
+      <div class="container-fluid aboutus__text ms-auto mx-auto col-6 col-sm-6 col-md-6 col-lg-6">
+          <h2>Sobre Nosotros...</h2>
+          <p>La Evolución Digital de tu empresa, es nuestro objetivo, por lo mismo te apoyamos en el desarrollo de tu Sitio Web, enfocándonos que sea una verdadera herramienta que cumpla una serie de objetivos para tu empresa. Las premisas son diseño, contenido y las mejores funcionalidades.
+
+              También atendemos el mercado, que requiere un gran porcentaje de empresas, el Marketing Digital, por medio de campañas en Google Ads, Facebook Ads y otros medios, esto con el fin de la generación de prospectos.
+              
+              Las APP son cada vez más parte de nuestros días y la creatividad de empresas no para, nosotros te apoyamos en su desarrollo.
+              
+              </p>
+      </div>
+  </div>
+
+
+    <!-- footer -->
+    <footer class="container-fluid p-4  d-flex text-center align-items-center" id="footer">
+      <div class="container-fluid" id="footer__text">
+        <h2 class="fw-bolder section3__h2 display-4">Optimiza el proceso de la <br> creación de tu website con <br> ByondStudio</h2><br>
+
+        <ul class="container d-flex text-center justify-content-center section3__list">
+            <li>✓  Soluciones para tu emprendimiento</li>
+            <li>✓  Atencion personalizada en cada fase del proyecto</li>
+            <li>✓  Diseños modernos y minimalistas</li>
+        </ul>
+    </div>
+      </div>
+</footer>
+<div class="container-fluid text-center align-items-center align-content-center" id="copyright">
+  <div class="container" id="centrarFooter">
+        <p> © 2022 Powered By ByondStudio. All rights reserved.</p>
+</div>
+
     <!-- JavaScript Bundle with Popper -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
