--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -15,7 +15,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,400;0,500;1,700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="../styles/styles.css">
   </head>
   <body>
     <!-- Header -->
@@ -58,6 +58,64 @@
         </div>
       </nav>
     </header>
+
+
+
+
+
+    <div class="container justify-content-center servicios d-flex flex-wrap flex-lg-nowrap gap-3">
+      <div class="card text-bg-dark">
+        <img src="https://img.freepik.com/free-photo/professional-programmer-working-late-dark-office_1098-18705.jpg?w=1380&t=st=1663125567~exp=1663126167~hmac=f60ab9968cb7e4d620fe6aa8a493a0652e33f383f73112e599e7d38bc7008462" class="card-img" alt="...">
+        <div class="card-img-overlay text-center">
+          <h1 class="card-title display-3 fw-bolder">Desarrollo Web</h1>
+          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          <p class="card-text"><small>Last updated 3 mins ago</small></p>
+        </div>
+      </div>
+      <div class="card text-bg-dark">
+        <img src="https://img.freepik.com/free-photo/social-media-instagram-digital-marketing-concept-3d-rendering_106244-1717.jpg?w=1380&t=st=1663131243~exp=1663131843~hmac=697c2083f386a3c2774716ee8ce40a11cff53ecc0b8885087e6e4c9a9255a6ee" class="card-img" alt="...">
+        <div class="card-img-overlay text-center">
+          <h1 class="card-title display-3 fw-bolder">Marketing Digital</h1>
+          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          <p class="card-text"><small>Last updated 3 mins ago</small></p>
+        </div>
+      </div>
+      <div class="card text-bg-dark">
+        <img src="https://img.freepik.com/free-photo/professional-programmer-working-late-dark-office_1098-18705.jpg?w=1380&t=st=1663125567~exp=1663126167~hmac=f60ab9968cb7e4d620fe6aa8a493a0652e33f383f73112e599e7d38bc7008462" class="card-img" alt="...">
+        <div class="card-img-overlay text-center">
+          <h1 class="card-title display-3 fw-bolder">Diseño Grafico</h1>
+          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          <p class="card-text"><small>Last updated 3 mins ago</small></p>
+        </div>
+      </div>
+
+    </div>
+
+
+
+
+
+            <!-- footer -->
+            <footer class="container-fluid p-4  d-flex text-center align-items-center" id="footer">
+              <div class="container-fluid" id="footer__text">
+                <h2 class="fw-bolder display-4 section3__h2">Optimiza el proceso de la <br> creación de tu website con <br> ByondStudio</h2><br>
+                <a href="./Pages/contacto.html">
+                    <button type="button" name="Contactar" class="btn btn-primary section3__btn">Contactar</button><br><br>
+                </a>
+                <ul class="container d-flex text-center justify-content-center section3__list">
+                    <li>✓  Soluciones para tu emprendimiento</li>
+                    <li>✓  Atencion personalizada en cada fase del proyecto</li>
+                    <li>✓  Diseños modernos y minimalistas</li>
+                </ul>
+            </div>
+              </div>
+            </footer>
+            <div class="container-fluid text-center align-items-center align-content-center" id="copyright">
+              <div class="container" id="centrarFooter">
+                <p> © 2022 Powered By ByondStudio. All rights reserved.</p>
+              </div>
+        
+            </div>
     <!-- JavaScript Bundle with Popper -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
