--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -68,24 +68,21 @@
         <img src="https://img.freepik.com/free-photo/professional-programmer-working-late-dark-office_1098-18705.jpg?w=1380&t=st=1663125567~exp=1663126167~hmac=f60ab9968cb7e4d620fe6aa8a493a0652e33f383f73112e599e7d38bc7008462" class="card-img" alt="...">
         <div class="card-img-overlay text-center">
           <h1 class="card-title display-3 fw-bolder">Desarrollo Web</h1>
-          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-          <p class="card-text"><small>Last updated 3 mins ago</small></p>
+          <p class="card-text">Creamos una pagina web 100% personalizada a tus necesidades y las de tu negocio. Generamos una interfaz sencilla e intuitiva para que los usuarios puedan navegar entre ella sin ningun problema y mejorando la interaccion. </p>
         </div>
       </div>
       <div class="card text-bg-dark">
         <img src="https://img.freepik.com/free-photo/social-media-instagram-digital-marketing-concept-3d-rendering_106244-1717.jpg?w=1380&t=st=1663131243~exp=1663131843~hmac=697c2083f386a3c2774716ee8ce40a11cff53ecc0b8885087e6e4c9a9255a6ee" class="card-img" alt="...">
         <div class="card-img-overlay text-center">
           <h1 class="card-title display-3 fw-bolder">Marketing Digital</h1>
-          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-          <p class="card-text"><small>Last updated 3 mins ago</small></p>
+          <p class="card-text">Nos hacemos cargo de tus redes sociales, creamos campañas publicitarias que incluyen post, historias, reels, manejo de cuentas, siempre buscando generar el engagement que necesita tu negocio.</p>
         </div>
       </div>
       <div class="card text-bg-dark">
         <img src="https://img.freepik.com/free-photo/professional-programmer-working-late-dark-office_1098-18705.jpg?w=1380&t=st=1663125567~exp=1663126167~hmac=f60ab9968cb7e4d620fe6aa8a493a0652e33f383f73112e599e7d38bc7008462" class="card-img" alt="...">
         <div class="card-img-overlay text-center">
           <h1 class="card-title display-3 fw-bolder">Diseño Grafico</h1>
-          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-          <p class="card-text"><small>Last updated 3 mins ago</small></p>
+          <p class="card-text">Aun no tienes una identidad? Tenemos a diseñadores que se encargaran de darle vida a tu empresa, desde diseño de logos, manual de identidades, plantillas para tus publicaciones, entre otros.</p>
         </div>
       </div>
 
