--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -63,15 +63,15 @@
       <h2 class="display-6 fw-bolder">Contactanos</h2><br>
       <div class="mb-3">
         <label for="exampleFormControlInput1" class="form-label">Nombre</label>
-        <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Ingresa tu nombre completo" required>
+        <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Ejemplo: John Doe" required>
       </div>
       <div class="mb-3">
         <label for="exampleFormControlInput1" class="form-label">Numero Telefonico</label>
-        <input type="tel" class="form-control" id="exampleFormControlInput1" placeholder="Ingresa tu numero telefonico" required>
+        <input type="tel" class="form-control" id="exampleFormControlInput1" placeholder="Ejemplo: (123) 456-7899" required>
       </div>
       <div class="mb-3">
         <label for="exampleFormControlInput1" class="form-label">Correo Electronico</label>
-        <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Ingresa tu correo electronico" required>
+        <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Ejemplo: byondstudio@mail.com" required>
       </div>
       <div class="mb-3">
         <label for="exampleFormControlTextarea1" class="form-label">Comentarios</label>
